--- a/usr/share/openmediavault/locale/ja_JP/openmediavault-openvpn.po
+++ b/usr/share/openmediavault/locale/ja_JP/openmediavault-openvpn.po
@@ -3,13 +3,14 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
+# kansuke <kansuke4649@gmail.com>, 2014
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault-openvpn\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-04-09 06:57-0500\n"
-"PO-Revision-Date: 2014-04-09 11:57+0000\n"
-"Last-Translator: ryecoaaron <aaron27@ryecoinc.com>\n"
+"POT-Creation-Date: 2014-04-10 10:57-0500\n"
+"PO-Revision-Date: 2014-04-10 00:20+0000\n"
+"Last-Translator: kansuke <kansuke4649@gmail.com>\n"
 "Language-Team: Japanese (Japan) (http://www.transifex.com/projects/p/openmediavault-openvpn/language/ja_JP/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -36,7 +37,7 @@ msgid "Common name"
 msgstr "コモンネーム"
 
 msgid "DHCP options"
-msgstr ""
+msgstr "DHCPオプション"
 
 msgid "DNS search domains(s)"
 msgstr "DNS検索ドメイン"
@@ -93,16 +94,16 @@ msgid "Protocol"
 msgstr "プロトコル"
 
 msgid "Public"
-msgstr ""
+msgstr "公開"
 
 msgid "Public address"
-msgstr ""
+msgstr "公開アドレス"
 
 msgid "Separate multiple entries with commas"
 msgstr "カンマ区切りの複数エントリー"
 
 msgid "Services"
-msgstr ""
+msgstr "サービス"
 
 msgid "Settings"
 msgstr "設定"
@@ -110,7 +111,7 @@ msgstr "設定"
 msgid ""
 "This is the address which external clients can connect to your VPN with. "
 "This is automatically used in the generated configuration."
-msgstr ""
+msgstr "このアドレスは外部のクライアントがVPNに接続するためのものです。これは自動的に生成された構成で使用されます。"
 
 msgid "UUID"
 msgstr "UUID"
