--- a/usr/share/openmediavault/locale/it_IT/openmediavault-openvpn.po
+++ b/usr/share/openmediavault/locale/it_IT/openmediavault-openvpn.po
@@ -3,13 +3,14 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
+# Paolo Velati <paolo.velati@gmail.com>, 2014
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault-openvpn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-04-10 10:57-0500\n"
-"PO-Revision-Date: 2014-04-09 11:57+0000\n"
-"Last-Translator: ryecoaaron <aaron27@ryecoinc.com>\n"
+"PO-Revision-Date: 2014-04-10 16:41+0000\n"
+"Last-Translator: Paolo Velati <paolo.velati@gmail.com>\n"
 "Language-Team: Italian (http://www.transifex.com/projects/p/openmediavault-openvpn/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -36,7 +37,7 @@ msgid "Common name"
 msgstr "Nome Comune"
 
 msgid "DHCP options"
-msgstr ""
+msgstr "Opzioni DHCP"
 
 msgid "DNS search domains(s)"
 msgstr "Dominio di ricerca DNS"
@@ -93,16 +94,16 @@ msgid "Protocol"
 msgstr "Protocollo"
 
 msgid "Public"
-msgstr ""
+msgstr "Pubblico"
 
 msgid "Public address"
-msgstr ""
+msgstr "Indirizzo pubblico"
 
 msgid "Separate multiple entries with commas"
 msgstr "Separa voci multiple con una virgola"
 
 msgid "Services"
-msgstr ""
+msgstr "Servizi"
 
 msgid "Settings"
 msgstr "Impostazioni"
@@ -110,7 +111,7 @@ msgstr "Impostazioni"
 msgid ""
 "This is the address which external clients can connect to your VPN with. "
 "This is automatically used in the generated configuration."
-msgstr ""
+msgstr "Questo è l'indirizzo al quale i client esterni potranno connettersi per entrare nella VPN. Viene automaticamente utilizzato nella configurazione generata."
 
 msgid "UUID"
 msgstr "UUID"
