--- a/usr/share/openmediavault/locale/ja_JP/openmediavault-openvpn.po
+++ b/usr/share/openmediavault/locale/ja_JP/openmediavault-openvpn.po
@@ -3,14 +3,14 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# kansuke <kansuke4649@gmail.com>, 2014
+# Toshihiro Kan <kansuke4649@gmail.com>, 2014
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault-openvpn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-04-10 10:57-0500\n"
 "PO-Revision-Date: 2014-04-10 00:20+0000\n"
-"Last-Translator: kansuke <kansuke4649@gmail.com>\n"
+"Last-Translator: Toshihiro Kan <kansuke4649@gmail.com>\n"
 "Language-Team: Japanese (Japan) (http://www.transifex.com/projects/p/openmediavault-openvpn/language/ja_JP/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
