--- a/usr/share/openmediavault/locale/pl_PL/openmediavault-openvpn.po
+++ b/usr/share/openmediavault/locale/pl_PL/openmediavault-openvpn.po
@@ -3,86 +3,86 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Stefan Thrane Overby <stoverby@gmail.com>, 2014
+# Cyryl Sochacki <cyrylsochacki@gmail.com>, 2014
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault-openvpn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-04-10 10:57-0500\n"
-"PO-Revision-Date: 2014-04-11 04:39+0000\n"
-"Last-Translator: Stefan Thrane Overby <stoverby@gmail.com>\n"
-"Language-Team: Danish (http://www.transifex.com/projects/p/openmediavault-openvpn/language/da/)\n"
+"PO-Revision-Date: 2014-07-22 07:08+0000\n"
+"Last-Translator: Cyryl Sochacki <cyrylsochacki@gmail.com>\n"
+"Language-Team: Polish (Poland) (http://www.transifex.com/projects/p/openmediavault-openvpn/language/pl_PL/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: da\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: pl_PL\n"
+"Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
 msgid "Add certificate"
-msgstr "Tilføj certifikat"
+msgstr "Dodaj certyfikat"
 
 msgid "Address"
-msgstr "Adresse"
+msgstr "Adres"
 
 msgid "Allow client to client communication"
-msgstr "Tillad klient til klient kommunikation"
+msgstr "Pozwól na komunikację pomiędzy użytkownikami"
 
 msgid "Certificates"
-msgstr "Certifikater"
+msgstr "Certyfikaty"
 
 msgid "Client to client"
-msgstr "Klient til klient"
+msgstr "Klient do klienta"
 
 msgid "Common name"
-msgstr "Fælles navn"
+msgstr "Podstawowa nazwa"
 
 msgid "DHCP options"
-msgstr "DHCP valgmuligheder"
+msgstr "Opcje DHCP"
 
 msgid "DNS search domains(s)"
-msgstr "DNS søge domæne(r)"
+msgstr "Szukanie domen(y) DNS"
 
 msgid "DNS server(s)"
-msgstr "DNS server(e)"
+msgstr "Serwer(y) DNS"
 
 msgid "Date & Time"
-msgstr "Dato & Tid"
+msgstr "Data i czas"
 
 msgid "Debug"
 msgstr "Debug"
 
 msgid "Download certificate"
-msgstr "Download certifikat"
+msgstr "Pobierz certyfikat"
 
 msgid "Enable"
-msgstr "Aktiver"
+msgstr "Włącz"
 
 msgid "Event"
-msgstr "Begivenhed"
+msgstr "Zdarzenie"
 
 msgid "Extra options"
-msgstr "Ekstra valgmuligheder"
+msgstr "Dodatkowe opcje"
 
 msgid "General"
-msgstr "Generelt"
+msgstr "Główne"
 
 msgid "General settings"
-msgstr "Generelle indstillinger"
+msgstr "Główne ustawienia"
 
 msgid "Log each packet"
-msgstr "Log hver pakke"
+msgstr ""
 
 msgid "Logging level"
-msgstr "Log niveau"
+msgstr "Poziom logów"
 
 msgid "Mask"
-msgstr "Masker"
+msgstr "Maska"
 
 msgid "No output except fatal errors"
-msgstr "Intet output undtaget alvorlige fejl"
+msgstr ""
 
 msgid "Normal usage output"
-msgstr "Normal forbrug output"
+msgstr ""
 
 msgid "OpenVPN"
 msgstr "OpenVPN"
@@ -91,39 +91,39 @@ msgid "Port"
 msgstr "Port"
 
 msgid "Protocol"
-msgstr "Protokol"
+msgstr "Protokół"
 
 msgid "Public"
-msgstr "Offentlig"
+msgstr "Publiczny"
 
 msgid "Public address"
-msgstr "Offentlig adresse"
+msgstr "Publiczny adres"
 
 msgid "Separate multiple entries with commas"
-msgstr "Del forskellige indtastninger med komma"
+msgstr "Oddziel wpisy przecinkami"
 
 msgid "Services"
-msgstr "Tjenester"
+msgstr "Usługi"
 
 msgid "Settings"
-msgstr "Indstillinger"
+msgstr "Ustawienia"
 
 msgid ""
 "This is the address which external clients can connect to your VPN with. "
 "This is automatically used in the generated configuration."
-msgstr "Dette er adressen som eksterne klienter kan forbinde til din VPN med. Den bliver automatisk brugt i den generet konfiguration."
+msgstr ""
 
 msgid "UUID"
 msgstr "UUID"
 
 msgid "Use compression"
-msgstr "Brug komprimering"
+msgstr "Użyj kompresji"
 
 msgid "User"
-msgstr "Bruger"
+msgstr "Użytkownik"
 
 msgid "VPN network"
-msgstr "VPN netværk"
+msgstr "Sieć VPN"
 
 msgid "WINS server(s)"
-msgstr "WINS server(e)"
+msgstr "Serwer(y) WINS"
