--- a/usr/share/openmediavault/locale/ru_RU/openmediavault-openvpn.po
+++ b/usr/share/openmediavault/locale/ru_RU/openmediavault-openvpn.po
@@ -3,127 +3,127 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Stefan Thrane Overby <stoverby@gmail.com>, 2014
+# Alexander Savchenko, 2014
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault-openvpn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-04-10 10:57-0500\n"
-"PO-Revision-Date: 2014-04-11 04:39+0000\n"
-"Last-Translator: Stefan Thrane Overby <stoverby@gmail.com>\n"
-"Language-Team: Danish (http://www.transifex.com/projects/p/openmediavault-openvpn/language/da/)\n"
+"PO-Revision-Date: 2014-06-15 20:36+0000\n"
+"Last-Translator: Alexander Savchenko\n"
+"Language-Team: Russian (http://www.transifex.com/projects/p/openmediavault-openvpn/language/ru/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: da\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: ru\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
 msgid "Add certificate"
-msgstr "Tilføj certifikat"
+msgstr "Добавить сетификат"
 
 msgid "Address"
-msgstr "Adresse"
+msgstr "Адрес"
 
 msgid "Allow client to client communication"
-msgstr "Tillad klient til klient kommunikation"
+msgstr ""
 
 msgid "Certificates"
-msgstr "Certifikater"
+msgstr "Сертификаты"
 
 msgid "Client to client"
-msgstr "Klient til klient"
+msgstr ""
 
 msgid "Common name"
-msgstr "Fælles navn"
+msgstr ""
 
 msgid "DHCP options"
-msgstr "DHCP valgmuligheder"
+msgstr "DHCP опции"
 
 msgid "DNS search domains(s)"
-msgstr "DNS søge domæne(r)"
+msgstr ""
 
 msgid "DNS server(s)"
-msgstr "DNS server(e)"
+msgstr "DNS сервер(а)"
 
 msgid "Date & Time"
-msgstr "Dato & Tid"
+msgstr ""
 
 msgid "Debug"
-msgstr "Debug"
+msgstr ""
 
 msgid "Download certificate"
-msgstr "Download certifikat"
+msgstr "Загрузить сертификат"
 
 msgid "Enable"
-msgstr "Aktiver"
+msgstr "Включить"
 
 msgid "Event"
-msgstr "Begivenhed"
+msgstr ""
 
 msgid "Extra options"
-msgstr "Ekstra valgmuligheder"
+msgstr "Дополнительные опции"
 
 msgid "General"
-msgstr "Generelt"
+msgstr ""
 
 msgid "General settings"
-msgstr "Generelle indstillinger"
+msgstr "Основный настройки"
 
 msgid "Log each packet"
-msgstr "Log hver pakke"
+msgstr ""
 
 msgid "Logging level"
-msgstr "Log niveau"
+msgstr ""
 
 msgid "Mask"
-msgstr "Masker"
+msgstr "Маска"
 
 msgid "No output except fatal errors"
-msgstr "Intet output undtaget alvorlige fejl"
+msgstr ""
 
 msgid "Normal usage output"
-msgstr "Normal forbrug output"
+msgstr ""
 
 msgid "OpenVPN"
 msgstr "OpenVPN"
 
 msgid "Port"
-msgstr "Port"
+msgstr "Порт"
 
 msgid "Protocol"
-msgstr "Protokol"
+msgstr "Протокол"
 
 msgid "Public"
-msgstr "Offentlig"
+msgstr ""
 
 msgid "Public address"
-msgstr "Offentlig adresse"
+msgstr "Публичный адрес"
 
 msgid "Separate multiple entries with commas"
-msgstr "Del forskellige indtastninger med komma"
+msgstr ""
 
 msgid "Services"
-msgstr "Tjenester"
+msgstr ""
 
 msgid "Settings"
-msgstr "Indstillinger"
+msgstr "Настройки"
 
 msgid ""
 "This is the address which external clients can connect to your VPN with. "
 "This is automatically used in the generated configuration."
-msgstr "Dette er adressen som eksterne klienter kan forbinde til din VPN med. Den bliver automatisk brugt i den generet konfiguration."
+msgstr ""
 
 msgid "UUID"
-msgstr "UUID"
+msgstr ""
 
 msgid "Use compression"
-msgstr "Brug komprimering"
+msgstr "Использовать сжатие"
 
 msgid "User"
-msgstr "Bruger"
+msgstr "Пользователь"
 
 msgid "VPN network"
-msgstr "VPN netværk"
+msgstr "VPN сеть"
 
 msgid "WINS server(s)"
-msgstr "WINS server(e)"
+msgstr "WINS сервер(а)"
