--- a/usr/share/openmediavault/locale/zh_CN/openmediavault-openvpn.po
+++ b/usr/share/openmediavault/locale/zh_CN/openmediavault-openvpn.po
@@ -3,14 +3,14 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# dezi121 <by@songming.me>, 2014
+# songming <by@songming.me>, 2014
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault-openvpn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-04-10 10:57-0500\n"
-"PO-Revision-Date: 2014-04-09 11:57+0000\n"
-"Last-Translator: ryecoaaron <aaron27@ryecoinc.com>\n"
+"PO-Revision-Date: 2014-04-19 01:11+0000\n"
+"Last-Translator: songming <by@songming.me>\n"
 "Language-Team: Chinese (China) (http://www.transifex.com/projects/p/openmediavault-openvpn/language/zh_CN/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -37,7 +37,7 @@ msgid "Common name"
 msgstr "通用名"
 
 msgid "DHCP options"
-msgstr ""
+msgstr "DHCP选项"
 
 msgid "DNS search domains(s)"
 msgstr "DNS search domains(s)"
@@ -94,16 +94,16 @@ msgid "Protocol"
 msgstr "协议"
 
 msgid "Public"
-msgstr ""
+msgstr "公共"
 
 msgid "Public address"
-msgstr ""
+msgstr "公共地址"
 
 msgid "Separate multiple entries with commas"
 msgstr "用逗号分隔多个条目"
 
 msgid "Services"
-msgstr ""
+msgstr "服务"
 
 msgid "Settings"
 msgstr "设置"
@@ -111,7 +111,7 @@ msgstr "设置"
 msgid ""
 "This is the address which external clients can connect to your VPN with. "
 "This is automatically used in the generated configuration."
-msgstr ""
+msgstr "通过这个地址客户端可以连接到你的VPN，如果未作干预系统会自动使用常规配置。"
 
 msgid "UUID"
 msgstr "UUID"
