--- a/usr/share/openmediavault/locale/es/openmediavault-openvpn.po
+++ b/usr/share/openmediavault/locale/es/openmediavault-openvpn.po
@@ -8,15 +8,21 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault-openvpn\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-04-10 10:57-0500\n"
-"PO-Revision-Date: 2014-04-21 11:41+0000\n"
-"Last-Translator: Raul Fernandez Garcia <raulfg3@gmail.com>\n"
+"POT-Creation-Date: 2014-09-27 07:25-0500\n"
+"PO-Revision-Date: 2014-09-27 12:27+0000\n"
+"Last-Translator: Aaron Murray <aaron27@ryecoinc.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/projects/p/openmediavault-openvpn/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: es\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
+
+msgid "-------OpenVPN status--------"
+msgstr ""
+
+msgid "-----IP pool reservation-----"
+msgstr ""
 
 msgid "Add certificate"
 msgstr "Añadir certificado"
@@ -51,6 +57,9 @@ msgstr "Fecha y hora"
 msgid "Debug"
 msgstr "Depuración"
 
+msgid "Default gateway"
+msgstr ""
+
 msgid "Download certificate"
 msgstr "Descargar certificado"
 
@@ -69,6 +78,12 @@ msgstr "General"
 msgid "General settings"
 msgstr "Opciones"
 
+msgid ""
+"If enabled, this directive will configure all clients to redirect their "
+"default network gateway through the VPN. If disabled, a static route to the "
+"private subnet is configured on all clients."
+msgstr ""
+
 msgid "Log each packet"
 msgstr "Log de cada paquete"
 
@@ -78,14 +93,23 @@ msgstr "Nivel de log"
 msgid "Mask"
 msgstr "Máscara"
 
+msgid "No IP reserved."
+msgstr ""
+
 msgid "No output except fatal errors"
 msgstr "No mostrar nada excepto errores fatales."
+
+msgid "No users connected."
+msgstr ""
 
 msgid "Normal usage output"
 msgstr "Mostar uso normal"
 
 msgid "OpenVPN"
 msgstr "OpenVPN"
+
+msgid "OpenVPN is disabled."
+msgstr ""
 
 msgid "Port"
 msgstr "Puerto"
