--- a/usr/share/openmediavault/locale/it_IT/openmediavault-openvpn.po
+++ b/usr/share/openmediavault/locale/it_IT/openmediavault-openvpn.po
@@ -8,15 +8,21 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault-openvpn\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-04-10 10:57-0500\n"
-"PO-Revision-Date: 2014-04-10 16:41+0000\n"
-"Last-Translator: Paolo Velati <paolo.velati@gmail.com>\n"
+"POT-Creation-Date: 2014-09-27 07:25-0500\n"
+"PO-Revision-Date: 2014-09-27 12:27+0000\n"
+"Last-Translator: Aaron Murray <aaron27@ryecoinc.com>\n"
 "Language-Team: Italian (http://www.transifex.com/projects/p/openmediavault-openvpn/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: it\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
+
+msgid "-------OpenVPN status--------"
+msgstr ""
+
+msgid "-----IP pool reservation-----"
+msgstr ""
 
 msgid "Add certificate"
 msgstr "Aggiungi certificato"
@@ -51,6 +57,9 @@ msgstr "Data & Orario"
 msgid "Debug"
 msgstr "Debug"
 
+msgid "Default gateway"
+msgstr ""
+
 msgid "Download certificate"
 msgstr "Scarica certificato"
 
@@ -69,6 +78,12 @@ msgstr "Generale"
 msgid "General settings"
 msgstr "Impostazioni generali"
 
+msgid ""
+"If enabled, this directive will configure all clients to redirect their "
+"default network gateway through the VPN. If disabled, a static route to the "
+"private subnet is configured on all clients."
+msgstr ""
+
 msgid "Log each packet"
 msgstr "Logga ogni pacchetto"
 
@@ -78,14 +93,23 @@ msgstr "Livello di log"
 msgid "Mask"
 msgstr "Maschera"
 
+msgid "No IP reserved."
+msgstr ""
+
 msgid "No output except fatal errors"
 msgstr "Nessun output tranne che per errori fatali"
+
+msgid "No users connected."
+msgstr ""
 
 msgid "Normal usage output"
 msgstr "Output di utilizzo normale"
 
 msgid "OpenVPN"
 msgstr "OpenVPN"
+
+msgid "OpenVPN is disabled."
+msgstr ""
 
 msgid "Port"
 msgstr "Porta"
