--- a/usr/share/openmediavault/locale/pl_PL/openmediavault-openvpn.po
+++ b/usr/share/openmediavault/locale/pl_PL/openmediavault-openvpn.po
@@ -8,15 +8,21 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault-openvpn\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-04-10 10:57-0500\n"
-"PO-Revision-Date: 2014-07-22 07:08+0000\n"
-"Last-Translator: Cyryl Sochacki <cyrylsochacki@gmail.com>\n"
+"POT-Creation-Date: 2014-09-27 07:25-0500\n"
+"PO-Revision-Date: 2014-09-27 12:27+0000\n"
+"Last-Translator: Aaron Murray <aaron27@ryecoinc.com>\n"
 "Language-Team: Polish (Poland) (http://www.transifex.com/projects/p/openmediavault-openvpn/language/pl_PL/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: pl_PL\n"
 "Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+
+msgid "-------OpenVPN status--------"
+msgstr ""
+
+msgid "-----IP pool reservation-----"
+msgstr ""
 
 msgid "Add certificate"
 msgstr "Dodaj certyfikat"
@@ -51,6 +57,9 @@ msgstr "Data i czas"
 msgid "Debug"
 msgstr "Debug"
 
+msgid "Default gateway"
+msgstr ""
+
 msgid "Download certificate"
 msgstr "Pobierz certyfikat"
 
@@ -69,6 +78,12 @@ msgstr "Główne"
 msgid "General settings"
 msgstr "Główne ustawienia"
 
+msgid ""
+"If enabled, this directive will configure all clients to redirect their "
+"default network gateway through the VPN. If disabled, a static route to the "
+"private subnet is configured on all clients."
+msgstr ""
+
 msgid "Log each packet"
 msgstr ""
 
@@ -78,7 +93,13 @@ msgstr "Poziom logów"
 msgid "Mask"
 msgstr "Maska"
 
+msgid "No IP reserved."
+msgstr ""
+
 msgid "No output except fatal errors"
+msgstr ""
+
+msgid "No users connected."
 msgstr ""
 
 msgid "Normal usage output"
@@ -86,6 +107,9 @@ msgstr ""
 
 msgid "OpenVPN"
 msgstr "OpenVPN"
+
+msgid "OpenVPN is disabled."
+msgstr ""
 
 msgid "Port"
 msgstr "Port"
