--- a/usr/share/openmediavault/locale/da_DA/openmediavault-openvpn.po
+++ b/usr/share/openmediavault/locale/da_DA/openmediavault-openvpn.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: openmediavault-openvpn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-09-27 07:25-0500\n"
-"PO-Revision-Date: 2014-09-27 12:27+0000\n"
-"Last-Translator: Aaron Murray <aaron27@ryecoinc.com>\n"
+"PO-Revision-Date: 2014-09-29 07:18+0000\n"
+"Last-Translator: Stefan Thrane Overby <stoverby@gmail.com>\n"
 "Language-Team: Danish (http://www.transifex.com/projects/p/openmediavault-openvpn/language/da/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -19,10 +19,10 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 msgid "-------OpenVPN status--------"
-msgstr ""
+msgstr "-------OpenVPN status--------"
 
 msgid "-----IP pool reservation-----"
-msgstr ""
+msgstr "-----IP pool reservation-----"
 
 msgid "Add certificate"
 msgstr "Tilføj certifikat"
@@ -58,7 +58,7 @@ msgid "Debug"
 msgstr "Debug"
 
 msgid "Default gateway"
-msgstr ""
+msgstr "Standard gateway"
 
 msgid "Download certificate"
 msgstr "Download certifikat"
@@ -82,7 +82,7 @@ msgid ""
 "If enabled, this directive will configure all clients to redirect their "
 "default network gateway through the VPN. If disabled, a static route to the "
 "private subnet is configured on all clients."
-msgstr ""
+msgstr "Hvis aktiveret vil dette direktiv konfigurere alle klienter til at videresende deres standard gateway igennem VPNen. Hvis deaktiveret vil en statisk route til det private subnet blive konfigureret på alle klienter. "
 
 msgid "Log each packet"
 msgstr "Log hver pakke"
@@ -94,13 +94,13 @@ msgid "Mask"
 msgstr "Masker"
 
 msgid "No IP reserved."
-msgstr ""
+msgstr "Ingen IP reserveret."
 
 msgid "No output except fatal errors"
 msgstr "Intet output undtaget alvorlige fejl"
 
 msgid "No users connected."
-msgstr ""
+msgstr "Ingen brugere forbundet."
 
 msgid "Normal usage output"
 msgstr "Normal forbrug output"
@@ -109,7 +109,7 @@ msgid "OpenVPN"
 msgstr "OpenVPN"
 
 msgid "OpenVPN is disabled."
-msgstr ""
+msgstr "OpenVPN er deaktiveret."
 
 msgid "Port"
 msgstr "Port"
