--- a/usr/share/openmediavault/locale/it_IT/openmediavault-openvpn.po
+++ b/usr/share/openmediavault/locale/it_IT/openmediavault-openvpn.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: openmediavault-openvpn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-09-27 07:25-0500\n"
-"PO-Revision-Date: 2014-09-27 12:27+0000\n"
-"Last-Translator: Aaron Murray <aaron27@ryecoinc.com>\n"
+"PO-Revision-Date: 2014-10-13 22:27+0000\n"
+"Last-Translator: Paolo Velati <paolo.velati@gmail.com>\n"
 "Language-Team: Italian (http://www.transifex.com/projects/p/openmediavault-openvpn/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -19,7 +19,7 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 msgid "-------OpenVPN status--------"
-msgstr ""
+msgstr "-------Stato di OpenVPN--------"
 
 msgid "-----IP pool reservation-----"
 msgstr ""
@@ -94,13 +94,13 @@ msgid "Mask"
 msgstr "Maschera"
 
 msgid "No IP reserved."
-msgstr ""
+msgstr "Nessun IP riservato."
 
 msgid "No output except fatal errors"
 msgstr "Nessun output tranne che per errori fatali"
 
 msgid "No users connected."
-msgstr ""
+msgstr "Nessun utente connesso."
 
 msgid "Normal usage output"
 msgstr "Output di utilizzo normale"
@@ -109,7 +109,7 @@ msgid "OpenVPN"
 msgstr "OpenVPN"
 
 msgid "OpenVPN is disabled."
-msgstr ""
+msgstr "OpenVPN è disabilitato."
 
 msgid "Port"
 msgstr "Porta"
