--- a/usr/share/openmediavault/locale/ja_JP/openmediavault-openvpn.po
+++ b/usr/share/openmediavault/locale/ja_JP/openmediavault-openvpn.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: openmediavault-openvpn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-09-27 07:25-0500\n"
-"PO-Revision-Date: 2014-09-27 12:27+0000\n"
-"Last-Translator: Aaron Murray <aaron27@ryecoinc.com>\n"
+"PO-Revision-Date: 2014-09-29 05:22+0000\n"
+"Last-Translator: Toshihiro Kan <kansuke4649@gmail.com>\n"
 "Language-Team: Japanese (Japan) (http://www.transifex.com/projects/p/openmediavault-openvpn/language/ja_JP/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -19,10 +19,10 @@ msgstr ""
 "Plural-Forms: nplurals=1; plural=0;\n"
 
 msgid "-------OpenVPN status--------"
-msgstr ""
+msgstr "-------OpenVPN ステータス--------"
 
 msgid "-----IP pool reservation-----"
-msgstr ""
+msgstr "-----IP pool 予約-----"
 
 msgid "Add certificate"
 msgstr "証明書の追加"
@@ -58,7 +58,7 @@ msgid "Debug"
 msgstr "デバッグ"
 
 msgid "Default gateway"
-msgstr ""
+msgstr "デフォルトゲートウェイ"
 
 msgid "Download certificate"
 msgstr "証明書のダウンロード"
@@ -82,7 +82,7 @@ msgid ""
 "If enabled, this directive will configure all clients to redirect their "
 "default network gateway through the VPN. If disabled, a static route to the "
 "private subnet is configured on all clients."
-msgstr ""
+msgstr "有効にした場合、VPNを経由してデフォルトネットワークへリダイレクトする設定をすべてのクライアントに適応します。無効にした場合は、プライベートサブネットへの静的ルートをすべてのクライアントに適応します。"
 
 msgid "Log each packet"
 msgstr "各パケットのログ"
@@ -94,13 +94,13 @@ msgid "Mask"
 msgstr "マスク"
 
 msgid "No IP reserved."
-msgstr ""
+msgstr "予約されたIPはありません。"
 
 msgid "No output except fatal errors"
 msgstr "致命的なエラー以外は何も出力しない"
 
 msgid "No users connected."
-msgstr ""
+msgstr "だれも接続していません。"
 
 msgid "Normal usage output"
 msgstr "通常の出力方法"
@@ -109,7 +109,7 @@ msgid "OpenVPN"
 msgstr "OpenVPN"
 
 msgid "OpenVPN is disabled."
-msgstr ""
+msgstr "OpenVPNは無効です。"
 
 msgid "Port"
 msgstr "ポート"
