--- a/usr/share/openmediavault/locale/pl_PL/openmediavault-openvpn.po
+++ b/usr/share/openmediavault/locale/pl_PL/openmediavault-openvpn.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: openmediavault-openvpn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-09-27 07:25-0500\n"
-"PO-Revision-Date: 2014-09-27 12:27+0000\n"
-"Last-Translator: Aaron Murray <aaron27@ryecoinc.com>\n"
+"PO-Revision-Date: 2014-10-27 21:14+0000\n"
+"Last-Translator: Cyryl Sochacki <cyrylsochacki@gmail.com>\n"
 "Language-Team: Polish (Poland) (http://www.transifex.com/projects/p/openmediavault-openvpn/language/pl_PL/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -19,7 +19,7 @@ msgstr ""
 "Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
 msgid "-------OpenVPN status--------"
-msgstr ""
+msgstr "-------Status OpenVPN--------"
 
 msgid "-----IP pool reservation-----"
 msgstr ""
@@ -109,7 +109,7 @@ msgid "OpenVPN"
 msgstr "OpenVPN"
 
 msgid "OpenVPN is disabled."
-msgstr ""
+msgstr "OpenVPN jest wyłączony."
 
 msgid "Port"
 msgstr "Port"
