--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+openmediavault-openvpn (1.0.11) stable; urgency=low
+
+  * Fixed cannot input domain in 'DNS search domain' field
+  * Fixed cannot input multiple entries separated with commas
+  * Fixed log entries missing for date from 1 to 9
+  * Restricted 'Common Name' field in certificate tab to alphanum
+
+ -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Tue, 04 Nov 2014 18:50:00 +0100
+
 openmediavault-openvpn (1.0.10) stable; urgency=low
 
   * Correctly call applyFilter
