--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,8 @@ openmediavault-openvpn (1.0.11) stable; urgency=low
   * Fixed cannot input multiple entries separated with commas
   * Fixed log entries missing for date from 1 to 9
   * Restricted 'Common Name' field in certificate tab to alphanum
+  * Fixed iptables rule not added upon boot/reboot
+  * Refined iptables to remove previous rule before adding new rule
 
  -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Tue, 04 Nov 2014 18:50:00 +0100
 
