--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-openvpn (1.0.12) stable; urgency=low
+
+  * Fix bug that caused mkconf to fail on initial run. 
+
+ -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Thu, 06 Nov 2014 23:16:36 +0100
+
 openmediavault-openvpn (1.0.11) stable; urgency=low
 
   * Fixed cannot input domain in 'DNS search domain' field
