--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+openmediavault-openvpn (1.0.13) stable; urgency=low
+
+  * Add custom debian/control field XB-Plugin-Section
+  * Update locales
+
+ -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Fri, 12 Dec 2014 07:21:12 -0600
+
 openmediavault-openvpn (1.0.12) stable; urgency=low
 
   * Fix bug that caused mkconf to fail on initial run. 
