--- a/usr/share/openmediavault/locale/es_ES/openmediavault-openvpn.po
+++ b/usr/share/openmediavault/locale/es_ES/openmediavault-openvpn.po
@@ -3,151 +3,151 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Cyryl Sochacki <cyrylsochacki@gmail.com>, 2014
+# Raul Fernandez Garcia <raulfg3@gmail.com>, 2014
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault-openvpn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-09-27 07:25-0500\n"
-"PO-Revision-Date: 2014-11-14 19:50+0000\n"
-"Last-Translator: Aaron Murray <aaron27@ryecoinc.com>\n"
-"Language-Team: Polish (Poland) (http://www.transifex.com/projects/p/openmediavault-openvpn/language/pl_PL/)\n"
+"PO-Revision-Date: 2014-11-16 22:03+0000\n"
+"Last-Translator: Raul Fernandez Garcia <raulfg3@gmail.com>\n"
+"Language-Team: Spanish (Spain) (http://www.transifex.com/projects/p/openmediavault-openvpn/language/es_ES/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: pl_PL\n"
-"Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"Language: es_ES\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 msgid "-------OpenVPN status--------"
-msgstr "-------Status OpenVPN--------"
+msgstr "-------OpenVPN estado--------"
 
 msgid "-----IP pool reservation-----"
-msgstr ""
+msgstr "-----Reserva IP pool-----"
 
 msgid "Add certificate"
-msgstr "Dodaj certyfikat"
+msgstr "Añadir certificado"
 
 msgid "Address"
-msgstr "Adres"
+msgstr "Dirección"
 
 msgid "Allow client to client communication"
-msgstr "Pozwól na komunikację pomiędzy użytkownikami"
+msgstr "Permitir comunicación cliente a cliente"
 
 msgid "Certificates"
-msgstr "Certyfikaty"
+msgstr "Certificados"
 
 msgid "Client to client"
-msgstr "Klient do klienta"
+msgstr "Clente a cliente"
 
 msgid "Common name"
-msgstr "Podstawowa nazwa"
+msgstr "Nombre"
 
 msgid "DHCP options"
-msgstr "Opcje DHCP"
+msgstr "Opciones DHCP"
 
 msgid "DNS search domains(s)"
-msgstr "Szukanie domen(y) DNS"
+msgstr "Dominio(s) de busqueda DNS"
 
 msgid "DNS server(s)"
-msgstr "Serwer(y) DNS"
+msgstr "Servidor(es) DNS"
 
 msgid "Date & Time"
-msgstr "Data i czas"
+msgstr "Fecha y hora"
 
 msgid "Debug"
-msgstr "Debug"
+msgstr "Depuración"
 
 msgid "Default gateway"
-msgstr ""
+msgstr "Gateway por defecto"
 
 msgid "Download certificate"
-msgstr "Pobierz certyfikat"
+msgstr "Descargar certificado"
 
 msgid "Enable"
-msgstr "Włącz"
+msgstr "Habilitar"
 
 msgid "Event"
-msgstr "Zdarzenie"
+msgstr "Evento"
 
 msgid "Extra options"
-msgstr "Dodatkowe opcje"
+msgstr "Opciones"
 
 msgid "General"
-msgstr "Główne"
+msgstr "General"
 
 msgid "General settings"
-msgstr "Główne ustawienia"
+msgstr "Opciones"
 
 msgid ""
 "If enabled, this directive will configure all clients to redirect their "
 "default network gateway through the VPN. If disabled, a static route to the "
 "private subnet is configured on all clients."
-msgstr ""
+msgstr "Si se habilita, esta directiva configurará todos los clientes para ser redirigidos atraves del gateway de la VPN. Si se deshabilita, una ruta estatica será configurada en todos los clientes."
 
 msgid "Log each packet"
-msgstr ""
+msgstr "Log de cada paquete"
 
 msgid "Logging level"
-msgstr "Poziom logów"
+msgstr "Nivel de log"
 
 msgid "Mask"
-msgstr "Maska"
+msgstr "Máscara"
 
 msgid "No IP reserved."
-msgstr ""
+msgstr "No se ha reservado IP."
 
 msgid "No output except fatal errors"
-msgstr ""
+msgstr "No mostrar nada excepto errores fatales."
 
 msgid "No users connected."
-msgstr ""
+msgstr "No hay usuarios conectados."
 
 msgid "Normal usage output"
-msgstr ""
+msgstr "Mostar uso normal"
 
 msgid "OpenVPN"
 msgstr "OpenVPN"
 
 msgid "OpenVPN is disabled."
-msgstr "OpenVPN jest wyłączony."
+msgstr "OpenVPN está deshabilitado."
 
 msgid "Port"
-msgstr "Port"
+msgstr "Puerto"
 
 msgid "Protocol"
-msgstr "Protokół"
+msgstr "Protocolo"
 
 msgid "Public"
-msgstr "Publiczny"
+msgstr "Publico"
 
 msgid "Public address"
-msgstr "Publiczny adres"
+msgstr "Dirección publica"
 
 msgid "Separate multiple entries with commas"
-msgstr "Oddziel wpisy przecinkami"
+msgstr "Separar multiples entradas con comas"
 
 msgid "Services"
-msgstr "Usługi"
+msgstr "Servicios"
 
 msgid "Settings"
-msgstr "Ustawienia"
+msgstr "Opciones"
 
 msgid ""
 "This is the address which external clients can connect to your VPN with. "
 "This is automatically used in the generated configuration."
-msgstr ""
+msgstr "Está es la dirección a la que los clientes VPN externos se podrán conectar. Se usa automáticamente en la configuración por defecto"
 
 msgid "UUID"
 msgstr "UUID"
 
 msgid "Use compression"
-msgstr "Użyj kompresji"
+msgstr "Usar compresión"
 
 msgid "User"
-msgstr "Użytkownik"
+msgstr "Usuario"
 
 msgid "VPN network"
-msgstr "Sieć VPN"
+msgstr "Red VPN"
 
 msgid "WINS server(s)"
-msgstr "Serwer(y) WINS"
+msgstr "Servidor(es) WINS"
