--- a/usr/share/openmediavault/locale/ko_KR/openmediavault-openvpn.po
+++ b/usr/share/openmediavault/locale/ko_KR/openmediavault-openvpn.po
@@ -3,151 +3,151 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# songming <by@songming.me>, 2014
+# Hyeonkyu Chu <hyeonkyu@gmail.com>, 2014
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault-openvpn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-09-27 07:25-0500\n"
-"PO-Revision-Date: 2014-11-14 19:50+0000\n"
-"Last-Translator: Aaron Murray <aaron27@ryecoinc.com>\n"
-"Language-Team: Chinese (China) (http://www.transifex.com/projects/p/openmediavault-openvpn/language/zh_CN/)\n"
+"PO-Revision-Date: 2014-11-22 13:37+0000\n"
+"Last-Translator: Hyeonkyu Chu <hyeonkyu@gmail.com>\n"
+"Language-Team: Korean (Korea) (http://www.transifex.com/projects/p/openmediavault-openvpn/language/ko_KR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: zh_CN\n"
+"Language: ko_KR\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 
 msgid "-------OpenVPN status--------"
-msgstr "-------OpenVPN状态--------"
+msgstr "-------OpenVPN 현황--------"
 
 msgid "-----IP pool reservation-----"
-msgstr "-----IP保留池-----"
+msgstr "-----IP pool 할당-----"
 
 msgid "Add certificate"
-msgstr "添加证书"
+msgstr "인증 추가"
 
 msgid "Address"
-msgstr "地址"
+msgstr "주소"
 
 msgid "Allow client to client communication"
-msgstr "允许客户端到客户端之间的通信"
+msgstr "클라이언트 사이의 통신 허용"
 
 msgid "Certificates"
-msgstr "证书"
+msgstr "인증"
 
 msgid "Client to client"
-msgstr "客户端到客户端"
+msgstr "클라이언트 사이"
 
 msgid "Common name"
-msgstr "通用名"
+msgstr "공통 이름"
 
 msgid "DHCP options"
-msgstr "DHCP选项"
+msgstr "DHCP 옵션"
 
 msgid "DNS search domains(s)"
-msgstr "DNS search domains(s)"
+msgstr "DNS 검색 도메인(들)"
 
 msgid "DNS server(s)"
-msgstr "DNS server(s)"
+msgstr "DNS 서버(들)"
 
 msgid "Date & Time"
-msgstr "日期和时间"
+msgstr "날짜 & 시간"
 
 msgid "Debug"
-msgstr "Debug"
+msgstr "디버그"
 
 msgid "Default gateway"
-msgstr "默认网关"
+msgstr "기본 게이트웨이"
 
 msgid "Download certificate"
-msgstr "下载证书"
+msgstr "인증서 내려받기"
 
 msgid "Enable"
-msgstr "启用"
+msgstr "활성화"
 
 msgid "Event"
-msgstr "事件"
+msgstr "이벤트"
 
 msgid "Extra options"
-msgstr "扩展选项"
+msgstr "추가 선택 사항"
 
 msgid "General"
-msgstr "常规"
+msgstr "일반"
 
 msgid "General settings"
-msgstr "常规设置"
+msgstr "일반 설정"
 
 msgid ""
 "If enabled, this directive will configure all clients to redirect their "
 "default network gateway through the VPN. If disabled, a static route to the "
 "private subnet is configured on all clients."
-msgstr "如果启用，该规则将配置应用于所有客户端，客户端将通过VPN重定向使用默认网关。如果不启用，私有子网的静态路由将配置应用所有客户端。"
+msgstr "선택한 경우, 모든 클라이언트가 기본 네트워크 게이트웨이를 VPN을 통해 재전송하도록 구성합니다. 해제한 경우, 개인 서브넷에 대한 정적 경로는 모든 클라이언트에 구성되어 있습니다."
 
 msgid "Log each packet"
-msgstr "记录每个数据包"
+msgstr "개별 패킷 기록"
 
 msgid "Logging level"
-msgstr "日志级别"
+msgstr "기록 수준"
 
 msgid "Mask"
-msgstr "掩码"
+msgstr "마스크"
 
 msgid "No IP reserved."
-msgstr "没有保留IP。"
+msgstr "할당된 IP 없음."
 
 msgid "No output except fatal errors"
-msgstr "除致命错误不进行输出"
+msgstr "치명적인 오류만 출력"
 
 msgid "No users connected."
-msgstr "没有用户连接。"
+msgstr "연결된 사용자 없음."
 
 msgid "Normal usage output"
-msgstr "常规使用输出"
+msgstr "정상적인 사용 출력"
 
 msgid "OpenVPN"
 msgstr "OpenVPN"
 
 msgid "OpenVPN is disabled."
-msgstr "OpenVPN停用。"
+msgstr "OpenVPN이 비활성화됨"
 
 msgid "Port"
-msgstr "端口"
+msgstr "포트"
 
 msgid "Protocol"
-msgstr "协议"
+msgstr "통신 규약"
 
 msgid "Public"
-msgstr "公共"
+msgstr "공개"
 
 msgid "Public address"
-msgstr "公共地址"
+msgstr "공개 주소"
 
 msgid "Separate multiple entries with commas"
-msgstr "用逗号分隔多个条目"
+msgstr "여러 항목은 쉼표로 구분합니다"
 
 msgid "Services"
-msgstr "服务"
+msgstr "서비스"
 
 msgid "Settings"
-msgstr "设置"
+msgstr "설정"
 
 msgid ""
 "This is the address which external clients can connect to your VPN with. "
 "This is automatically used in the generated configuration."
-msgstr "通过这个地址客户端可以连接到你的VPN，如果未作干预系统会自动使用常规配置。"
+msgstr "외부 클라이언트가 VPN에 연결할 수 있는 주소입니다.<br/>자동으로 생성된 구성(인증 탭에서 내려받는 인증서에 포함)에서 사용됩니다."
 
 msgid "UUID"
 msgstr "UUID"
 
 msgid "Use compression"
-msgstr "使用压缩"
+msgstr "압축 사용"
 
 msgid "User"
-msgstr "用户"
+msgstr "사용자"
 
 msgid "VPN network"
-msgstr "VPN网络"
+msgstr "VPN 네트워크"
 
 msgid "WINS server(s)"
-msgstr "WINS server(s)"
+msgstr "WINS 서버(들)"
