--- a/usr/share/openmediavault/locale/fr_FR/openmediavault-openvpn.po
+++ b/usr/share/openmediavault/locale/fr_FR/openmediavault-openvpn.po
@@ -3,13 +3,14 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
+# Seboss666 <sebastien_verdet@seboss666.info>, 2015
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault-openvpn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-09-27 07:25-0500\n"
-"PO-Revision-Date: 2014-11-14 19:50+0000\n"
-"Last-Translator: Aaron Murray <aaron27@ryecoinc.com>\n"
+"PO-Revision-Date: 2015-04-06 00:45+0000\n"
+"Last-Translator: Seboss666 <sebastien_verdet@seboss666.info>\n"
 "Language-Team: French (http://www.transifex.com/projects/p/openmediavault-openvpn/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -18,135 +19,135 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
 msgid "-------OpenVPN status--------"
-msgstr ""
+msgstr "-------État d'OpenVPN--------"
 
 msgid "-----IP pool reservation-----"
-msgstr ""
+msgstr "-----Réservation du pool d'IP-----"
 
 msgid "Add certificate"
-msgstr ""
+msgstr "Ajouter le certificat"
 
 msgid "Address"
-msgstr ""
+msgstr "Adresse"
 
 msgid "Allow client to client communication"
-msgstr ""
+msgstr "Autoriser la communication client à client"
 
 msgid "Certificates"
-msgstr ""
+msgstr "Certificats"
 
 msgid "Client to client"
-msgstr ""
+msgstr "Client à client"
 
 msgid "Common name"
-msgstr ""
+msgstr "Nom courant"
 
 msgid "DHCP options"
-msgstr ""
+msgstr "Options DHCP"
 
 msgid "DNS search domains(s)"
-msgstr ""
+msgstr "Domaine(s) de recherche DNS"
 
 msgid "DNS server(s)"
-msgstr ""
+msgstr "Serveur(s) DNS"
 
 msgid "Date & Time"
-msgstr ""
+msgstr "Date & Heure"
 
 msgid "Debug"
-msgstr ""
+msgstr "Debuggage"
 
 msgid "Default gateway"
-msgstr ""
+msgstr "Passerelle par défaut"
 
 msgid "Download certificate"
-msgstr ""
+msgstr "Télécharger le certificat"
 
 msgid "Enable"
-msgstr ""
+msgstr "Activer"
 
 msgid "Event"
-msgstr ""
+msgstr "Évènement"
 
 msgid "Extra options"
-msgstr ""
+msgstr "Options supplémentaires"
 
 msgid "General"
-msgstr ""
+msgstr "Général"
 
 msgid "General settings"
-msgstr ""
+msgstr "Paramètres généraux"
 
 msgid ""
 "If enabled, this directive will configure all clients to redirect their "
 "default network gateway through the VPN. If disabled, a static route to the "
 "private subnet is configured on all clients."
-msgstr ""
+msgstr "Si elle est activée, cette directive va configurer tous les clients pour qu'ils redirigent leur passerelle par défaut au travers du VPN. Si désactivée, une route statique vers le sous-réseau privé est configurée sur tous les clients."
 
 msgid "Log each packet"
-msgstr ""
+msgstr "Journaliser chaque paquet"
 
 msgid "Logging level"
-msgstr ""
+msgstr "Niveau de journalisation"
 
 msgid "Mask"
-msgstr ""
+msgstr "Masquer"
 
 msgid "No IP reserved."
-msgstr ""
+msgstr "Aucune IP réservée."
 
 msgid "No output except fatal errors"
-msgstr ""
+msgstr "Aucune sortie exceptée des erreurs fatales"
 
 msgid "No users connected."
-msgstr ""
+msgstr "Aucun utilisateur connecté."
 
 msgid "Normal usage output"
-msgstr ""
+msgstr "Sortie d'utilisation normale"
 
 msgid "OpenVPN"
-msgstr ""
+msgstr "OpenVPN"
 
 msgid "OpenVPN is disabled."
-msgstr ""
+msgstr "OpenVPN est désactivé."
 
 msgid "Port"
-msgstr ""
+msgstr "Port"
 
 msgid "Protocol"
-msgstr ""
+msgstr "Protocole"
 
 msgid "Public"
-msgstr ""
+msgstr "Public"
 
 msgid "Public address"
-msgstr ""
+msgstr "Adresse publique"
 
 msgid "Separate multiple entries with commas"
-msgstr ""
+msgstr "Séparer les entrées multiples avec des virgules"
 
 msgid "Services"
-msgstr ""
+msgstr "Services"
 
 msgid "Settings"
-msgstr ""
+msgstr "Paramètres"
 
 msgid ""
 "This is the address which external clients can connect to your VPN with. "
 "This is automatically used in the generated configuration."
-msgstr ""
+msgstr "Voici l'adresse que les clients externes peuvent utiliser pour se connecter au VPN. Elle est utilisée automatiquement dans la configuration générée."
 
 msgid "UUID"
-msgstr ""
+msgstr "UUID"
 
 msgid "Use compression"
-msgstr ""
+msgstr "Utiliser la compression"
 
 msgid "User"
-msgstr ""
+msgstr "Utilisateur"
 
 msgid "VPN network"
-msgstr ""
+msgstr "Réseau VPN"
 
 msgid "WINS server(s)"
-msgstr ""
+msgstr "Serveur(s) WINS"
