--- a/usr/share/openmediavault/locale/it_IT/openmediavault-openvpn.po
+++ b/usr/share/openmediavault/locale/it_IT/openmediavault-openvpn.po
@@ -3,14 +3,14 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Paolo Velati <paolo.velati@gmail.com>, 2014
+# Paolo Velati <paolo.velati@gmail.com>, 2014-2015
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault-openvpn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-09-27 07:25-0500\n"
-"PO-Revision-Date: 2014-11-14 19:50+0000\n"
-"Last-Translator: Aaron Murray <aaron27@ryecoinc.com>\n"
+"PO-Revision-Date: 2015-02-03 14:40+0000\n"
+"Last-Translator: Paolo Velati <paolo.velati@gmail.com>\n"
 "Language-Team: Italian (http://www.transifex.com/projects/p/openmediavault-openvpn/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -22,7 +22,7 @@ msgid "-------OpenVPN status--------"
 msgstr "-------Stato di OpenVPN--------"
 
 msgid "-----IP pool reservation-----"
-msgstr ""
+msgstr "-----Pool prenotazione IP-----"
 
 msgid "Add certificate"
 msgstr "Aggiungi certificato"
@@ -58,7 +58,7 @@ msgid "Debug"
 msgstr "Debug"
 
 msgid "Default gateway"
-msgstr ""
+msgstr "Gateway predefinito"
 
 msgid "Download certificate"
 msgstr "Scarica certificato"
@@ -82,7 +82,7 @@ msgid ""
 "If enabled, this directive will configure all clients to redirect their "
 "default network gateway through the VPN. If disabled, a static route to the "
 "private subnet is configured on all clients."
-msgstr ""
+msgstr "Se attivata, questa direttiva imposta tutti i client per ridirezionare il loro gateway predefinito attraverso la VPN. Se disattivato, è impostata su tutti i client una route statica alla sottorete privata."
 
 msgid "Log each packet"
 msgstr "Logga ogni pacchetto"
