--- a/usr/share/openmediavault/locale/pl_PL/openmediavault-openvpn.po
+++ b/usr/share/openmediavault/locale/pl_PL/openmediavault-openvpn.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: openmediavault-openvpn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-09-27 07:25-0500\n"
-"PO-Revision-Date: 2014-11-14 19:50+0000\n"
-"Last-Translator: Aaron Murray <aaron27@ryecoinc.com>\n"
+"PO-Revision-Date: 2014-12-20 21:10+0000\n"
+"Last-Translator: Cyryl Sochacki <cyrylsochacki@gmail.com>\n"
 "Language-Team: Polish (Poland) (http://www.transifex.com/projects/p/openmediavault-openvpn/language/pl_PL/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -58,7 +58,7 @@ msgid "Debug"
 msgstr "Debug"
 
 msgid "Default gateway"
-msgstr ""
+msgstr "Domyślna brama"
 
 msgid "Download certificate"
 msgstr "Pobierz certyfikat"
@@ -100,7 +100,7 @@ msgid "No output except fatal errors"
 msgstr ""
 
 msgid "No users connected."
-msgstr ""
+msgstr "Brak połączonych użytkowników."
 
 msgid "Normal usage output"
 msgstr ""
