--- a/usr/share/openmediavault/locale/ru_RU/openmediavault-openvpn.po
+++ b/usr/share/openmediavault/locale/ru_RU/openmediavault-openvpn.po
@@ -3,14 +3,14 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Alexander Savchenko, 2014
+# Alexander Savchenko, 2014-2015
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault-openvpn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-09-27 07:25-0500\n"
-"PO-Revision-Date: 2014-11-14 19:50+0000\n"
-"Last-Translator: Aaron Murray <aaron27@ryecoinc.com>\n"
+"PO-Revision-Date: 2015-03-04 19:38+0000\n"
+"Last-Translator: Alexander Savchenko\n"
 "Language-Team: Russian (http://www.transifex.com/projects/p/openmediavault-openvpn/language/ru/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -58,7 +58,7 @@ msgid "Debug"
 msgstr ""
 
 msgid "Default gateway"
-msgstr ""
+msgstr "Шлюз по умолчанию"
 
 msgid "Download certificate"
 msgstr "Загрузить сертификат"
