--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-openvpn (3.0.4) stable; urgency=low
+
+  * Fix create group bug
+
+ -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Fri, 11 Nov 2016 10:23:25 -0600
+
 openmediavault-openvpn (3.0.3) stable; urgency=medium
 
   * OMV 3.0.40 compatibility.
